--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
-h1 {
-    font-size: 70px;
+h1, h2 {
     font-family: 'Yeseva One', cursive;
 }
 
+h1 {
+    font-size: 70px;
+}
+
+h2 {
+    font-size: 50px;
+}
+
+h4,
 p,
 .btn {
     font-family: 'Montserrat', sans-serif;
