--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,59 @@ p,
 .btn {
     font-family: 'Montserrat', sans-serif;
 }
+h1, h2 {
+    font-family: 'Yeseva One', cursive;
+    color: #0D052E;
+}
+
+h1 {
+    font-size: 70px;
+}
+
+h2, 
+h3 {
+    font-size: 40px;
+}
+
+h3 {
+    font-weight: bold;
+    color: #707070;
+}
+
+h4 {
+    color: #34285C;
+    font-size: 24px;
+}
+
+p {
+    color: #707070;
+    line-height: 30px;
+    letter-spacing: 0.0015em;
+}
+
+h3,
+h4,
+p,
+ul li,
+.btn {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.btn {
+    color: #FFFFFF;
+    background-image: linear-gradient(to left, #1BD7BA, #06ACED);
+    border: none;
+    border-radius: 0px 25px;
+    padding: 14px 46px;
+}
+
+.btn:hover {
+    color: #FFFFFF;
+}
+.zoom:hover{
+    transform: scale(1.1) !important; 
+    transition: .5s ease;
+    box-shadow:  5px 10px 10px #1bd7bb36, 
+    -2px -0px 10px #06abed32;
+    border-radius: 30px 0px;
+}
