--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,9 @@ ul li,
     -2px -0px 10px #06abed32;
     border-radius: 30px 0px;
 }
+.bannerBg{
+    background-image: url("../src/images/bannerBackground.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+}
