--- a/src/App.css
+++ b/src/App.css
@@ -72,8 +72,9 @@ ul li,
     border-radius: 30px 0px;
 }
 .bannerBg{
-    background-image: url("../src/images/bannerBackground.png");
+    background-image: url("../src/images/bannerBg.png");
+    background-size: cover; 
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover; 
+    min-height: 100vh;
 }
