--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,8 @@ h3,
 h4,
 p,
 ul li,
-.btn {
+.btn,
+input::placeholder  {
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -57,14 +58,16 @@ h3 {
 
 h4 {
     color: #34285C;
-    font-size: 24px;
+    font-size: 20px;
 }
 
-p {
+p, 
+input::placeholder{
     color: #707070;
     line-height: 30px;
     letter-spacing: 0.0015em;
 }
+
 
 h3,
 h4,
@@ -86,10 +89,101 @@ ul li,
     color: #FFFFFF;
 }
 
-.zoom:hover{
-    transform: scale(1.1) !important; 
-    transition: .5s ease;
-    box-shadow:  5px 10px 10px #1bd7bb36, 
-    -2px -0px 10px #06abed32;
-    border-radius: 30px 0px;
+.navbar .logo,
+.footer-logo {
+    width: 172px;
+    height: 118px;
 }
+
+.navbar .nav-link,
+.navbar .login-btn {
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.navbar .nav-link {
+    font-family: 'Montserrat', sans-serif;
+    color: #263F44!important;
+}
+
+.navbar .login-btn:hover {
+    text-decoration: none;
+}
+
+.zoom:hover{
+    cursor: pointer;
+    background: #FFFFFF;
+    transition: .5s ease;
+    box-shadow: -1px 0px 20px 2px rgba(27, 215, 187, 0.253);
+    border-radius: 50px 0px;
+}
+
+.gradient-bg {
+    background-image: linear-gradient(to left, #1BD7BA, #06ACED);
+    box-shadow: -1px 0px 20px 2px rgba(27, 215, 187, 0.1);
+}
+
+.white-bg {
+    background-color: #FFFFFF;
+    box-shadow: -1px 0px 20px 2px rgba(27, 215, 187, 0.1);
+}
+
+.right-radius {
+    border-radius: 0px 50px;
+}
+
+.left-radius {
+    border-radius: 50px 0px;
+}
+
+.divider {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 1px;
+    background-image: linear-gradient(to left, #1BD7BA, #06ACED);
+}
+
+.pricing p,
+.pricing ul li,
+.footer ul li {
+    font-weight: 500;
+}
+
+.pricing-card,
+.subscribe-field {
+    box-shadow: -1px 0px 15px 2px rgba(102, 104, 103, 0.123);
+}
+
+.featured h3,
+.featured p {
+    color: #0f0f0f;
+}
+
+.featured {
+    border: 2px solid;
+    border-image-slice: 1;
+    border-width: 2px;
+    border-image-source: linear-gradient(to left, #1BD7BA, #06ACED);
+}
+
+.subscribe-field {
+    max-width: 800px;
+    height: 80px;
+    margin: 0 auto;
+    border-radius: 5px;
+    background: #FFFFFF;
+}
+
+.subscribe .btn {
+    border-radius: 5px;
+}
+
+.footer ul li a {
+    color: #464646;
+}
+
+.footer ul li a:hover {
+    text-decoration: none;
+}
+
