--- a/src/App.css
+++ b/src/App.css
@@ -185,5 +185,15 @@ ul li,
 
 .footer ul li a:hover {
     text-decoration: none;
+    box-shadow:  5px 10px 10px #1bd7bb36, 
+    -2px -0px 10px #06abed32;
+    border-radius: 30px 0px;
 }
 
+.bannerBg{
+    background-image: url("../src/images/bannerBg.png");
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+}
