Card Design Updated

--- a/src/App.css
+++ b/src/App.css
@@ -165,10 +165,7 @@ ul li,
 }
 
 .featured {
-    border: 2px solid;
-    border-image-slice: 1;
-    border-width: 2px;
-    border-image-source: linear-gradient(to left, #1BD7BA, #06ACED);
+    border: 2px solid #3cedce;
 }
 
 .subscribe-field {
