--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,15 @@ ul li,
     padding: 14px 46px;
 }
 
+.achivementCardActive{
+    background-image: linear-gradient(to left, #1BD7BA, #06ACED);
+    border: none;
+    border-radius: 0px 50px;   
+}
+.achivementCard{
+    border: none;
+    border-radius: 50px 0px;    
+}
 .btn:hover {
     color: #FFFFFF;
 }
@@ -101,10 +110,10 @@ background-color: transparent !important;
     background-color: #FAFFFD;
 }
 .achivementIllustration{
-    /* background-image: url("../src/images/achivement.png");
-    background-size: cover; 
-    background-position: center;
-    background-repeat: no-repeat; */
     background-color: #FAFFFD;
 }
 
+.card{
+    transform: scale(1.1) !important; 
+    transition: .5s ease;
+}
